--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -10,14 +10,16 @@
 <h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-
+    <h:outputStylesheet library="css" name="bootstrap.min.css" />
+    <h:outputScript library="js" name="bootstrap.bundle.min.js" />
+    <h:outputStylesheet library="css" name="styles.css" />
     <title>Página de Inicio</title>
 </h:head>
 
 <h:body>
 
     <div id="header">
+
         <header>
             <div class="px-3 py-2 bg-dark text-white">
                 <div class="container">
@@ -30,31 +32,31 @@
                         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                             <li>
                                 <a href="#" class="nav-link text-secondary">
-                                    <i class="pi pi-home bi d-block mx-auto mb-1" style="font-size: 1.5rem"></i>
+                                    <i class="pi pi-home bi d-block mx-auto mb-1 icon-menu" ></i>
                                     Home
                                 </a>
                             </li>
                             <li>
                                 <a href="crear_Producto.xhtml" class="nav-link text-white">
-                                    <i class="pi pi-save bi d-block mx-auto mb-1" style="font-size: 1.5rem"></i>
+                                    <i class="pi pi-save bi d-block mx-auto mb-1 icon-menu" ></i>
                                     Crear Producto
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="nav-link text-white">
-                                    <i class="pi pi-home bi d-block mx-auto mb-1" style="font-size: 1.5rem"></i>
+                                    <i class="pi pi-home bi d-block mx-auto mb-1 icon-menu" ></i>
                                     Orders
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="nav-link text-white">
-                                    <i class="pi pi-home bi d-block mx-auto mb-1" style="font-size: 1.5rem"></i>
+                                    <i class="pi pi-home bi d-block mx-auto mb-1 icon-menu" ></i>
                                     Products
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="nav-link text-white">
-                                    <i class="pi pi-user bi d-block mx-auto mb-1" style="font-size: 1.5rem"></i>
+                                    <i class="pi pi-user bi d-block mx-auto mb-1 icon-menu" ></i>
                                     Customers
                                 </a>
                             </li>
@@ -71,12 +73,13 @@
                         <p:commandButton icon="pi pi-search" action="#{busquedadBean.buscar}"  update="@form" />
                         </h:form>
                     </div>
-
-
                     <div class="text-end">
-                        <button type="button" class="btn btn-light text-dark me-2">Login</button>
-                        <button type="button" class="btn btn-primary">Sign-up</button>
+                        <h:form>
+                            <h:commandButton value="Login" styleClass="btn btn-light text-dark me-2"/>
+                            <h:commandButton value="Registrarse" styleClass="btn btn-primary" action="registrar_Usuario?faces-redirect=true"/>
+                        </h:form>
                     </div>
+
                 </div>
             </div>
         </header>
@@ -93,6 +96,6 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </h:body>
 </html>
