--- a/web/src/main/webapp/registrar_Usuario.xhtml
+++ b/web/src/main/webapp/registrar_Usuario.xhtml
@@ -16,7 +16,6 @@
     <h:form >
         <h:panelGrid columns="2" cellpadding="5">
 
-
             <p:outputLabel  value="Codigo:" for="codigo_u " />
             <p:inputText id="codigo_u" value="#{usuarioBean.usuario.codigo}" required="true"/>
 
@@ -29,10 +28,16 @@
             <p:outputLabel  value="Username:" for="username_u " />
             <p:inputText id="username_u" value="#{usuarioBean.usuario.username}" required="true"/>
 
+            <p:outputLabel  value="Ciudad:" for="ciudad_usuario " />
+            <p:selectOneMenu id="ciudad_usuario" value="#{usuarioBean.usuario.ciudad}"
+                             required="true" requiredMessage="La ciudad es obligatoria" >
+                <f:selectItems var="ciudad" itemLabel="#{ciudad.nombreCiudad}"
+                               value="#{usuarioBean.ciudades}" />
+            </p:selectOneMenu>
+
+
             <p:outputLabel  value="Password:" for="pass_u " />
             <p:password id="pass_u" value="#{usuarioBean.usuario.password}" required="true"/>
-
-
 
         </h:panelGrid>
 
